--- a/src/kit/taosdemo/CMakeLists.txt
+++ b/src/kit/taosdemo/CMakeLists.txt
@@ -8,6 +8,6 @@ INCLUDE_DIRECTORIES(inc)
 
 IF ((TD_LINUX_64) OR (TD_LINUX_32 AND TD_ARM))
   AUX_SOURCE_DIRECTORY(. SRC)
-  ADD_EXECUTABLE(taosdemo ${SRC})
-  TARGET_LINK_LIBRARIES(taosdemo taos_static)
+  ADD_EXECUTABLE(tsdemo ${SRC})
+  TARGET_LINK_LIBRARIES(tsdemo tscli_static)
 ENDIF ()
