--- a/src/kit/taosdump/CMakeLists.txt
+++ b/src/kit/taosdump/CMakeLists.txt
@@ -8,6 +8,6 @@ INCLUDE_DIRECTORIES(inc)
 
 IF ((TD_LINUX_64) OR (TD_LINUX_32 AND TD_ARM))
   AUX_SOURCE_DIRECTORY(. SRC)
-  ADD_EXECUTABLE(taosdump ${SRC})
-  TARGET_LINK_LIBRARIES(taosdump taos_static)
+  ADD_EXECUTABLE(tsdump ${SRC})
+  TARGET_LINK_LIBRARIES(tsdump tscli_static)
 ENDIF ()
