--- a/src/modules/monitor/CMakeLists.txt
+++ b/src/modules/monitor/CMakeLists.txt
@@ -8,5 +8,5 @@ IF ((TD_LINUX_64) OR (TD_LINUX_32 AND TD_ARM))
   INCLUDE_DIRECTORIES(inc)
   AUX_SOURCE_DIRECTORY(./src SRC)
   ADD_LIBRARY(monitor ${SRC})
-  TARGET_LINK_LIBRARIES(monitor taos_static)
+  TARGET_LINK_LIBRARIES(monitor tscli_static)
 ENDIF ()  
