--- a/src/kit/shell/CMakeLists.txt
+++ b/src/kit/shell/CMakeLists.txt
@@ -10,8 +10,8 @@ IF ((TD_LINUX_64) OR (TD_LINUX_32 AND TD_ARM))
   AUX_SOURCE_DIRECTORY(./src SRC)
   LIST(REMOVE_ITEM SRC ./src/shellWindows.c)
   ADD_EXECUTABLE(shell ${SRC})  
-  TARGET_LINK_LIBRARIES(shell taos_static)
-  SET_TARGET_PROPERTIES(shell PROPERTIES OUTPUT_NAME taos)
+  TARGET_LINK_LIBRARIES(shell tscli_static)
+  SET_TARGET_PROPERTIES(shell PROPERTIES OUTPUT_NAME tscli)
 ELSEIF (TD_WINDOWS_64)
   INCLUDE_DIRECTORIES(${TD_COMMUNITY_DIR}/deps/pthread)
   INCLUDE_DIRECTORIES(${TD_COMMUNITY_DIR}/deps/regex)
@@ -19,14 +19,14 @@ ELSEIF (TD_WINDOWS_64)
   LIST(APPEND SRC ./src/shellMain.c)
   LIST(APPEND SRC ./src/shellWindows.c)
   ADD_EXECUTABLE(shell ${SRC})
-  TARGET_LINK_LIBRARIES(shell taos_static)
-  SET_TARGET_PROPERTIES(shell PROPERTIES OUTPUT_NAME taos)
+  TARGET_LINK_LIBRARIES(shell tscli_static)
+  SET_TARGET_PROPERTIES(shell PROPERTIES OUTPUT_NAME tscli)
 ELSEIF (TD_DARWIN_64)
   LIST(APPEND SRC ./src/shellEngine.c)
   LIST(APPEND SRC ./src/shellMain.c)
   LIST(APPEND SRC ./src/shellWindows.c)
   ADD_EXECUTABLE(shell ${SRC})
-  TARGET_LINK_LIBRARIES(shell taos_static)
-  SET_TARGET_PROPERTIES(shell PROPERTIES OUTPUT_NAME taos)
+  TARGET_LINK_LIBRARIES(shell tscli_static)
+  SET_TARGET_PROPERTIES(shell PROPERTIES OUTPUT_NAME tscli)
 ENDIF ()
 
